fix(UI): don't display username on small devices

--- a/app/containers/App/ConnectionWidget/User/User.scss
+++ b/app/containers/App/ConnectionWidget/User/User.scss
@@ -6,4 +6,8 @@
 .username {
   color: white;
   font-size: 18px;
+
+  @media screen and (max-width: 640px) {
+    display: none;
+  }
 }
